k8-manifests/api-gateway-service.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api-gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-service
  template:
    metadata:
      labels:
        app: api-gateway-service
    spec:
      containers:
        - name: api-gateway-service
          image: bkrishnan18/api-gateway-service:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8765
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8765
            initialDelaySeconds: 45
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8765
            initialDelaySeconds: 45
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  labels:
    app: api-gateway-service
spec:
  type: NodePort
  ports:
    - port: 8765
      targetPort: 8765
      protocol: TCP
      name: api-gateway-service
  selector:
    app: api-gateway-service
