k8-manifests/order-service.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: nkrishnakumar/bk-istio-order-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9005
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9005
            initialDelaySeconds: 45
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9005
            initialDelaySeconds: 45
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  type: NodePort
  ports:
    - port: 9005
      targetPort: 9005
      protocol: TCP
      nodePort: 32002
      name: order-service
  selector:
    app: order-service
