k8-manifests/product-service-azure.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
        version: v1
    spec:
      containers:
        - name: product-service
          image: nkrishnakumar/istio-product-service:#{Build.BuildId}#
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 45
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9000
            initialDelaySeconds: 45
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
#      nodePort: 32000
      name: product-service
  selector:
    app: product-service
