k8-manifests/service-registry.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: service-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
        - name: service-registry
          image: bkrishnan18/service-registry:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 45
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 45
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: service-registry-service
  labels:
    app: service-registry
spec:
  type: NodePort
  ports:
    - port: 8761
      targetPort: 8761
      nodePort: 32001
      protocol: TCP
      name: service-registry-service
  selector:
    app: service-registry
