k8-manifests/user-service-azure.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: nkrishnakumar/bk-istio-user-service:#{Build.BuildId}#
          imagePullPolicy: Always
          ports:
            - containerPort: 9010
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9010
            initialDelaySeconds: 45
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9010
            initialDelaySeconds: 45
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  type: NodePort
  ports:
    - port: 9010
      targetPort: 9010
      protocol: TCP
      nodePort: 32001
      name: user-service
  selector:
    app: user-service
